<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:elevation="0dp"
    tools:context="csuchico.smartnap.AlarmDialog">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:id="@+id/fullscreen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:fitsSystemWindows="true"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.16"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.97"
                android:text="@string/textview"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/fc_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6.87"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="to_answer"
                android:text="@string/this_will_be_the_question"
                android:textSize="22sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/fc_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.78"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="to_question"
                android:text="@string/this_will_be_the_answer"
                android:textSize="22sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.99"
                android:text="@string/textview1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_silenceAlarm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF0044"
                android:onClick="onSilenceAlarm"
                android:text="@string/silence_alarm" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
