<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="csuchico.smartnap.AlarmEdit">

    <LinearLayout
        android:id="@+id/baseLayoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/editAlarmHeader"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"/>

        <EditText
            android:id="@+id/alarmNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/inputAlarmName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="72dp"/>

        <TimePicker
            android:id="@+id/alarmTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="149dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <!-- android:timePickerMode="spinner" -->

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateAlarm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:onClick="createNewAlarm"
        android:text="@string/setNewAlarm"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="417dp"/>

</android.support.constraint.ConstraintLayout>
